CD/deployment.yaml
# Create the App Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventmanager-deployment
  namespace: eventmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventmanager
  template:
    metadata:
      labels:
        app: eventmanager
    spec:
    # Specify the container
      containers:
        - name: eventmanager
          image: prengineer/eventmanager:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 80
          # Add the volume
          volumeMounts:
          - mountPath: "/config"
            name: eventmanager-pv-storage
      # Specify the volume
      volumes:
      - name: eventmanager-pv-storage
        persistentVolumeClaim:
          claimName: eventmanager-pv-claim
