CD/service.yaml
# Create the Exposed App Service

apiVersion: v1
kind: Service
metadata:
  name: eventmanager
  namespace: eventmanager
spec:
  selector:
    app: eventmanager
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
