CD/ingress.yaml
# Ingress for the donations desk application

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Use the Production Let's Encrypt Issuer
    cert-manager.io/cluster-issuer: letsencrypt-production
    # This ingress is for Traefik
    spec.ingressClassName: traefik
    # Redirect all traffic to HTTPS, always
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  labels:
    app: eventmanager
  name: eventmanager
  # Deploy to eventmanager namespace
  namespace: eventmanager
spec:
  rules:
  # Change to your domain
  - host: <domain.tld>
    http:
      paths:
      - backend:
          service:
            name: eventmanager
            port: 
              number: 80
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    # Change to your domain
    - <domain.tld>
    secretName: eventmanager-tls
